# lovedahlia

./: package.json  tailwind.config.js
backend/: .gitignore  Cargo.toml
backend/src/: db.rs
components/: Banner.js  Footer.js  Landing.js  Layout.js  Modal.js  Navbar.js  Products.js  ProductsArray.js
pages/: 404.js  _app.js  _document.js  captcha.js  index.js  login.js  main.js  register.js  shop.js
pages/api/: Data1.js
pages/dashboard/: index.js
pages/flower/: [productId].js  index.js
