[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version="0.4.11" }
rocket_cors = "0.5.2"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]